<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#707070"
        tools:context=".RegisterActivity">


    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:background="@drawable/backround_layout"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginBottom="250dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:padding="5dp"
                app:ccp_defaultNameCode="Az"
                app:layout_constraintBottom_toTopOf="@+id/phoneText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4" />

            <EditText
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:backgroundTint="@android:color/white"
                android:hint="@string/_504264608"
                android:inputType="phone"
                android:padding="13dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.6" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/codeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/white"
        android:drawableStart="@drawable/password"
        android:drawableTint="@android:color/white"
        android:hint="@string/write_you_code_here"
        android:inputType="phone"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="m" />

    <Button
            android:id="@+id/continueNextButton"
            android:layout_width="120dp"
            android:layout_height="34dp"
            android:layout_below="@+id/codeText"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_background"
            android:text="@string/continue_register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.381" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginBottom="100dp" android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewResentCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resent_code"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/codeText"
        app:layout_constraintStart_toStartOf="@+id/codeText"
        app:layout_constraintTop_toBottomOf="@+id/codeText" />

</androidx.constraintlayout.widget.ConstraintLayout>