<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.Settings">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_view"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewContacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <ImageView
        android:id="@+id/imageViewUserProfile"
        android:layout_width="0dp"
        android:layout_height="234dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/user_profile_image"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_view" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/write_your_name_here"
        android:inputType="textPersonName"
        android:drawableTint="@android:color/black"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_person_pin_24"
        app:layout_constraintBottom_toTopOf="@+id/nav_view_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUserProfile"
        app:layout_constraintVertical_bias="0.041"
        tools:targetApi="m"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPersonBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableTint="@android:color/black"
        android:drawableStart="@drawable/ic_baseline_note_add_24"
        android:hint="@string/write_your_bio"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/nav_view_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.015"
        tools:targetApi="m"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonSettingSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonBio"
        app:layout_constraintVertical_bias="0.154" />

    <ProgressBar
        android:id="@+id/progressBarSettings"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_bar_view" />

    <ProgressBar
        android:id="@+id/progressBarSettingsImage"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewUserProfile"
        app:layout_constraintEnd_toEndOf="@+id/imageViewUserProfile"
        app:layout_constraintStart_toStartOf="@+id/imageViewUserProfile"
        app:layout_constraintTop_toTopOf="@+id/imageViewUserProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>